gcc/testsuite/rust.test/fail_compilation/tuple_struct3.rs
struct Foo(i32, i32, bool);

fn main() {
    let c = Foo(1, 2f32, true);
}
